# argus

./: .gitignore  LICENSE  docker-compose.yml  mongo.env
argus/: .dockerignore  Dockerfile  baseline.py  builder.py  config.py  constants.py  extensions.py  initialize.py  jobs.py  main.py  production.env  pyproject.toml  scheduler.py  settings.py
argus/api/: __init__.py  alert.py  assets.py  attack.py  baseline.py  errors.py  fields.py  health.py  management.py  routes.py  rule.py  setup.py  stats.py  user.py
argus/clients/: __init__.py  attack.py  elastic.py  feed.py
argus/data/analytics/: asset_network_protocol.yaml  asset_network_protocol_ports.yaml  windows_authentication_account.yaml  windows_authentication_src_dst.yaml
argus/models/: __init__.py  alert.py  asset.py  baseline.py  core.py  management.py  rule.py
argus/utils/: __init__.py
argus/utils/extractor/: __init__.py
argus/utils/filter/: __init__.py
argus/utils/handlers/: __init__.py
argus/utils/time/: __init__.py
docker_scripts/: db_setup.sh
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  config.js  index.js
web/src/api/: axios.js  index.js
web/src/common/: ComponentSkeleton.js  List.js  SortedTableHead.js  Status.js  TabPanel.js  Typography.js
web/src/components/: AlertSummary.js  BasicPopover.js  ComponentLoader.js  ConfirmationDialog.js  DonutGraph.js  DynamicTable.js  EventTable.js  FabPopover.js  FilterTextField.js  NoData.js  ProfilerChart.js  ScrollTop.js  SearchBox.js  StatusWrapper.js
web/src/menu-items/: pages.js  (+1 more)
(+95 files in other folders)
